test fix overflow mobile home page

--- a/css/main.css
+++ b/css/main.css
@@ -392,11 +392,4 @@ html, body {
   overflow-x: hidden;
   overflow-y: hidden; }
 
-body {
-  overflow: hidden; }
-  @media (max-width: 1200px) {
-    body {
-      overflow-x: hidden;
-      overflow-y: visible; } }
-
 /*# sourceMappingURL=main.css.map */
