--- a/css/scss/layout/_body.scss
+++ b/css/scss/layout/_body.scss
@@ -2,14 +2,3 @@ html, body {
   overflow-x: hidden;
   overflow-y: hidden;
 }
-
-
-body {
-  overflow: hidden;
-  @media (max-width: 1200px) {
-    overflow-x: hidden;
-    overflow-y: visible;
-  }
-}
-
-
